cmake_minimum_required(VERSION 4.1)
project(algo_cpp)

set(CMAKE_CXX_STANDARD 26)

add_executable(algo_cpp main.cpp)

add_executable(A_Recycling_Center "A_Recycling_Center.cpp")
add_executable(CF1900D_Small_GCD "CF1900D_Small_GCD.cpp")
add_executable(516_LibreOJ__Round_2DP_ "启发式合并/516_LibreOJ__Round_2DP_.cpp")
add_executable(P3224_HNOI2012_ "启发式合并/P3224_HNOI2012_.cpp")
add_executable(AT_abc372_e_ABC372E_K_th_Largest_Connected_Components "启发式合并/AT_abc372_e_ABC372E_K_th_Largest_Connected_Components.cpp")
add_executable(AT_indeednow_2015_quala_3_ "整体二分/AT_indeednow_2015_quala_3_.cpp")
add_executable(AT_abc226_e_ABC226E_Just_one "AT_abc226_e_ABC226E_Just_one.cpp")