cmake_minimum_required(VERSION 4.1)
project(algo_cpp)

set(CMAKE_CXX_STANDARD 26)

add_executable(algo_cpp main.cpp)

add_executable(A_Recycling_Center "A_Recycling_Center.cpp")
add_executable(CF1900D_Small_GCD "CF1900D_Small_GCD.cpp")
add_executable(516_LibreOJ__Round_2DP_ "启发式合并/516_LibreOJ__Round_2DP_.cpp")
add_executable(P3224_HNOI2012_ "启发式合并/P3224_HNOI2012_.cpp")
add_executable(AT_abc372_e_ABC372E_K_th_Largest_Connected_Components "启发式合并/AT_abc372_e_ABC372E_K_th_Largest_Connected_Components.cpp")
add_executable(AT_indeednow_2015_quala_3_ "整体二分/AT_indeednow_2015_quala_3_.cpp")
add_executable(AT_abc226_e_ABC226E_Just_one "图论/基环树/AT_abc226_e_ABC226E_Just_one.cpp")
add_executable(AT_abc021_c_ABC021C_ "图论/最短路/AT_abc021_c_ABC021C_.cpp")
add_executable(AT_joisc2014_c_ "根号算法/莫队/AT_joisc2014_c_.cpp")
add_executable(P5906_ "根号算法/莫队/P5906_.cpp")
add_executable(P4137_Rmq_Problem__mex "P4137_Rmq_Problem__mex.cpp")
add_executable(P8773__2022__A_ "P8773__2022__A_.cpp")
add_executable(P2464_SDOI2008__J "P2464_SDOI2008__J.cpp")
add_executable(P5268_SNOI2017_ "P5268_SNOI2017_.cpp")
add_executable(U41492_ "启发式合并/U41492_.cpp")
add_executable(P9233__2023__A_ "启发式合并/P9233__2023__A_.cpp")
add_executable(CF600E_Lomsat_gelral "启发式合并/CF600E_Lomsat_gelral.cpp")
add_executable(CF246E_Blood_Cousins_Return "启发式合并/CF246E_Blood_Cousins_Return.cpp")